--- a/package.xml
+++ b/package.xml
@@ -1,39 +1,36 @@
 <?xml version="1.0"?>
-<package format="2">
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>full_coverage_path_planner</name>
-  <version>0.6.4</version>
-  <description>Full coverage path planning provides a move_base_flex plugin that can plan a path that will fully cover a given area</description>
-  <author email="cesar.lopez@nobleo.nl">Cesar Lopez</author>
-  <author email="ferry.schoenmakers@nobleo.nl">Ferry Schoenmakers</author>
-  <author email="tim.clephas@nobleo.nl">Tim Clephas</author>
-  <author email="jerrel.unkel@nobleo.nl">Jerrel Unkel</author>
-  <author>Loy van Beek</author>
-  <author>Yury Brodskiy</author>
-  <maintainer email="cesar.lopez@nobleo.nl">Cesar Lopez</maintainer>
+  <version>0.4.5</version>
+  <description>TODO</description>
+  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
+  <maintainer email="carlos.a.orduno@intel.com">Carlos Orduno</maintainer>
+  <license>Apache-2.0</license>
+  <license>BSD-3-Clause</license>
 
-  <license>Apache 2.0</license>
-  <url>http://wiki.ros.org/full_coverage_path_planner</url>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roslint</build_depend>
-  <build_depend>rostest</build_depend>
-  <depend>base_local_planner</depend>
-  <depend>costmap_2d</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_action</depend>
+  <depend>rclcpp_lifecycle</depend>
+  <depend>visualization_msgs</depend>
+  <depend>nav2_util</depend>
+  <depend>nav2_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>builtin_interfaces</depend>
+  <depend>nav2_common</depend>
+  <depend>tf2_ros</depend>
+  <depend>nav2_costmap_2d</depend>
+  <depend>nav2_core</depend>
   <depend>pluginlib</depend>
-  <depend>nav_core</depend>
-  <depend>roscpp</depend>
-  <depend>tf</depend>
-  <exec_depend>amcl</exec_depend>
-  <exec_depend>joint_state_publisher</exec_depend>
-  <exec_depend>map_server</exec_depend>
-  <exec_depend>move_base</exec_depend>
-  <exec_depend>move_base_flex</exec_depend>
-  <test_depend>cv_bridge</test_depend>
-  <test_depend>rosunit</test_depend>
-  <test_depend>tracking_pid</test_depend>
+
+  <test_depend>ament_lint_common</test_depend>
+  <test_depend>ament_lint_auto</test_depend>
 
   <export>
-    <nav_core plugin="${prefix}/fcpp_plugin.xml"/>
+    <build_type>ament_cmake</build_type>
+    <nav2_core plugin="${prefix}/global_planner_plugin.xml" />
   </export>
-
 </package>
